src/framework/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    RETURN
    SIZEOF
    COLON
    PERIOD

Grammar

Rule 0     S' -> first
Rule 1     first -> top_level
Rule 2     top_level -> top_level comment
Rule 3     top_level -> top_level function_declaration
Rule 4     top_level -> top_level declaration
Rule 5     top_level -> top_level compound
Rule 6     top_level -> top_level assignment_expression_semi
Rule 7     top_level -> top_level expr
Rule 8     top_level -> top_level for_loop
Rule 9     top_level -> top_level include
Rule 10    top_level -> empty
Rule 11    comment -> COMMENT
Rule 12    arg_params -> term COMMA arg_params
Rule 13    arg_params -> typeid COMMA arg_params
Rule 14    arg_params -> binop
Rule 15    arg_params -> typeid
Rule 16    arg_params -> empty
Rule 17    arglist -> LPAREN arg_params RPAREN
Rule 18    assignment_operator -> EQUALS
Rule 19    assignment_operator -> PLUSEQUALS
Rule 20    assignment_operator -> MINUSEQUALS
Rule 21    assignment_operator -> TIMESEQUALS
Rule 22    assignment_expression -> typeid assignment_operator expr
Rule 23    assignment_expression -> identifier assignment_operator expr
Rule 24    assignment_expression -> array_reference assignment_operator expr
Rule 25    assignment_expression_semi -> assignment_expression SEMI
Rule 26    constant -> INT_CONST
Rule 27    constant -> FLOAT_CONST
Rule 28    constant -> STRING_LITERAL
Rule 29    increment -> term unary_token_after
Rule 30    binop -> LPAREN binop_expression RPAREN
Rule 31    binop -> binop_expression
Rule 32    binop_expression -> term
Rule 33    binop_expression -> binop DIVIDE binop
Rule 34    binop_expression -> binop TIMES binop
Rule 35    binop_expression -> binop PLUS binop
Rule 36    binop_expression -> binop MINUS binop
Rule 37    binop_expression -> binop MOD binop
Rule 38    binop_expression -> binop OR binop
Rule 39    binop_expression -> binop AND binop
Rule 40    binop_expression -> binop LSHIFT binop
Rule 41    binop_expression -> binop RSHIFT binop
Rule 42    binop_expression -> binop LOGOR binop
Rule 43    binop_expression -> binop LOGAND binop
Rule 44    binop_expression -> binop LT binop
Rule 45    binop_expression -> binop GT binop
Rule 46    binop_expression -> binop LE binop
Rule 47    binop_expression -> binop GE binop
Rule 48    binop_expression -> binop EQ binop
Rule 49    binop_expression -> binop NE binop
Rule 50    subscript -> LBRACKET expr RBRACKET
Rule 51    subscript_list -> subscript
Rule 52    subscript_list -> subscript subscript_list
Rule 53    array_reference -> identifier subscript_list
Rule 54    for_loop -> FOR LPAREN assignment_expression SEMI binop SEMI increment RPAREN compound
Rule 55    unary_token_before -> MINUS
Rule 56    unary_token_before -> LOGNOT
Rule 57    unary_token_after -> PLUSPLUS
Rule 58    unary_token_after -> MINUSMINUS
Rule 59    unary_expression -> unary_token_before term
Rule 60    term -> identifier
Rule 61    term -> constant
Rule 62    term -> array_reference
Rule 63    term -> function_call
Rule 64    term -> unary_expression
Rule 65    compound -> LBRACE top_level RBRACE
Rule 66    function_call -> identifier arglist
Rule 67    function_declaration -> typeid arglist SEMI
Rule 68    function_declaration -> typeid arglist compound
Rule 69    function_declaration -> function_call SEMI
Rule 70    declaration -> typeid SEMI
Rule 71    declaration -> array_typeid SEMI
Rule 72    typeid -> type identifier
Rule 73    array_typeid -> type identifier subscript_list
Rule 74    native_type -> VOID
Rule 75    native_type -> SIZE_T
Rule 76    native_type -> UNKNOWN
Rule 77    native_type -> CHAR
Rule 78    native_type -> SHORT
Rule 79    native_type -> INT
Rule 80    native_type -> LONG
Rule 81    native_type -> FLOAT
Rule 82    native_type -> DOUBLE
Rule 83    native_type -> SIGNED
Rule 84    native_type -> UNSIGNED
Rule 85    expr -> binop
Rule 86    type -> native_type
Rule 87    type -> native_type TIMES
Rule 88    identifier -> ID
Rule 89    include -> PPHASH INCLUDE STRING_LITERAL
Rule 90    empty -> <empty>

Terminals, with rules where they appear

AND                  : 39
CHAR                 : 77
COLON                : 
COMMA                : 12 13
COMMENT              : 11
DIVIDE               : 33
DOUBLE               : 82
EQ                   : 48
EQUALS               : 18
FLOAT                : 81
FLOAT_CONST          : 27
FOR                  : 54
GE                   : 47
GT                   : 45
ID                   : 88
INCLUDE              : 89
INT                  : 79
INT_CONST            : 26
LBRACE               : 65
LBRACKET             : 50
LE                   : 46
LOGAND               : 43
LOGNOT               : 56
LOGOR                : 42
LONG                 : 80
LPAREN               : 17 30 54
LSHIFT               : 40
LT                   : 44
MINUS                : 36 55
MINUSEQUALS          : 20
MINUSMINUS           : 58
MOD                  : 37
NE                   : 49
OR                   : 38
PERIOD               : 
PLUS                 : 35
PLUSEQUALS           : 19
PLUSPLUS             : 57
PPHASH               : 89
RBRACE               : 65
RBRACKET             : 50
RETURN               : 
RPAREN               : 17 30 54
RSHIFT               : 41
SEMI                 : 25 54 54 67 69 70 71
SHORT                : 78
SIGNED               : 83
SIZEOF               : 
SIZE_T               : 75
STRING_LITERAL       : 28 89
TIMES                : 34 87
TIMESEQUALS          : 21
UNKNOWN              : 76
UNSIGNED             : 84
VOID                 : 74
error                : 

Nonterminals, with rules where they appear

arg_params           : 12 13 17
arglist              : 66 67 68
array_reference      : 24 62
array_typeid         : 71
assignment_expression : 25 54
assignment_expression_semi : 6
assignment_operator  : 22 23 24
binop                : 14 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 54 85
binop_expression     : 30 31
comment              : 2
compound             : 5 54 68
constant             : 61
declaration          : 4
empty                : 10 16
expr                 : 7 22 23 24 50
first                : 0
for_loop             : 8
function_call        : 63 69
function_declaration : 3
identifier           : 23 53 60 66 72 73
include              : 9
increment            : 54
native_type          : 86 87
subscript            : 51 52
subscript_list       : 52 53 73
term                 : 12 29 32 59
top_level            : 1 2 3 4 5 6 7 8 9 65
type                 : 72 73
typeid               : 13 15 22 67 68 70
unary_expression     : 64
unary_token_after    : 29
unary_token_before   : 59

Parsing method: LALR

state 0

    (0) S' -> . first
    (1) first -> . top_level
    (2) top_level -> . top_level comment
    (3) top_level -> . top_level function_declaration
    (4) top_level -> . top_level declaration
    (5) top_level -> . top_level compound
    (6) top_level -> . top_level assignment_expression_semi
    (7) top_level -> . top_level expr
    (8) top_level -> . top_level for_loop
    (9) top_level -> . top_level include
    (10) top_level -> . empty
    (90) empty -> .

    COMMENT         reduce using rule 90 (empty -> .)
    LBRACE          reduce using rule 90 (empty -> .)
    FOR             reduce using rule 90 (empty -> .)
    PPHASH          reduce using rule 90 (empty -> .)
    LPAREN          reduce using rule 90 (empty -> .)
    ID              reduce using rule 90 (empty -> .)
    VOID            reduce using rule 90 (empty -> .)
    SIZE_T          reduce using rule 90 (empty -> .)
    UNKNOWN         reduce using rule 90 (empty -> .)
    CHAR            reduce using rule 90 (empty -> .)
    SHORT           reduce using rule 90 (empty -> .)
    INT             reduce using rule 90 (empty -> .)
    LONG            reduce using rule 90 (empty -> .)
    FLOAT           reduce using rule 90 (empty -> .)
    DOUBLE          reduce using rule 90 (empty -> .)
    SIGNED          reduce using rule 90 (empty -> .)
    UNSIGNED        reduce using rule 90 (empty -> .)
    INT_CONST       reduce using rule 90 (empty -> .)
    FLOAT_CONST     reduce using rule 90 (empty -> .)
    STRING_LITERAL  reduce using rule 90 (empty -> .)
    MINUS           reduce using rule 90 (empty -> .)
    LOGNOT          reduce using rule 90 (empty -> .)
    $end            reduce using rule 90 (empty -> .)

    top_level                      shift and go to state 1
    empty                          shift and go to state 2
    first                          shift and go to state 3

state 1

    (1) first -> top_level .
    (2) top_level -> top_level . comment
    (3) top_level -> top_level . function_declaration
    (4) top_level -> top_level . declaration
    (5) top_level -> top_level . compound
    (6) top_level -> top_level . assignment_expression_semi
    (7) top_level -> top_level . expr
    (8) top_level -> top_level . for_loop
    (9) top_level -> top_level . include
    (11) comment -> . COMMENT
    (67) function_declaration -> . typeid arglist SEMI
    (68) function_declaration -> . typeid arglist compound
    (69) function_declaration -> . function_call SEMI
    (70) declaration -> . typeid SEMI
    (71) declaration -> . array_typeid SEMI
    (65) compound -> . LBRACE top_level RBRACE
    (25) assignment_expression_semi -> . assignment_expression SEMI
    (85) expr -> . binop
    (54) for_loop -> . FOR LPAREN assignment_expression SEMI binop SEMI increment RPAREN compound
    (89) include -> . PPHASH INCLUDE STRING_LITERAL
    (72) typeid -> . type identifier
    (66) function_call -> . identifier arglist
    (73) array_typeid -> . type identifier subscript_list
    (22) assignment_expression -> . typeid assignment_operator expr
    (23) assignment_expression -> . identifier assignment_operator expr
    (24) assignment_expression -> . array_reference assignment_operator expr
    (30) binop -> . LPAREN binop_expression RPAREN
    (31) binop -> . binop_expression
    (86) type -> . native_type
    (87) type -> . native_type TIMES
    (88) identifier -> . ID
    (53) array_reference -> . identifier subscript_list
    (32) binop_expression -> . term
    (33) binop_expression -> . binop DIVIDE binop
    (34) binop_expression -> . binop TIMES binop
    (35) binop_expression -> . binop PLUS binop
    (36) binop_expression -> . binop MINUS binop
    (37) binop_expression -> . binop MOD binop
    (38) binop_expression -> . binop OR binop
    (39) binop_expression -> . binop AND binop
    (40) binop_expression -> . binop LSHIFT binop
    (41) binop_expression -> . binop RSHIFT binop
    (42) binop_expression -> . binop LOGOR binop
    (43) binop_expression -> . binop LOGAND binop
    (44) binop_expression -> . binop LT binop
    (45) binop_expression -> . binop GT binop
    (46) binop_expression -> . binop LE binop
    (47) binop_expression -> . binop GE binop
    (48) binop_expression -> . binop EQ binop
    (49) binop_expression -> . binop NE binop
    (74) native_type -> . VOID
    (75) native_type -> . SIZE_T
    (76) native_type -> . UNKNOWN
    (77) native_type -> . CHAR
    (78) native_type -> . SHORT
    (79) native_type -> . INT
    (80) native_type -> . LONG
    (81) native_type -> . FLOAT
    (82) native_type -> . DOUBLE
    (83) native_type -> . SIGNED
    (84) native_type -> . UNSIGNED
    (60) term -> . identifier
    (61) term -> . constant
    (62) term -> . array_reference
    (63) term -> . function_call
    (64) term -> . unary_expression
    (26) constant -> . INT_CONST
    (27) constant -> . FLOAT_CONST
    (28) constant -> . STRING_LITERAL
    (59) unary_expression -> . unary_token_before term
    (55) unary_token_before -> . MINUS
    (56) unary_token_before -> . LOGNOT

    $end            reduce using rule 1 (first -> top_level .)
    COMMENT         shift and go to state 19
    LBRACE          shift and go to state 29
    FOR             shift and go to state 27
    PPHASH          shift and go to state 38
    LPAREN          shift and go to state 30
    ID              shift and go to state 32
    VOID            shift and go to state 9
    SIZE_T          shift and go to state 46
    UNKNOWN         shift and go to state 8
    CHAR            shift and go to state 13
    SHORT           shift and go to state 5
    INT             shift and go to state 39
    LONG            shift and go to state 15
    FLOAT           shift and go to state 41
    DOUBLE          shift and go to state 45
    SIGNED          shift and go to state 42
    UNSIGNED        shift and go to state 43
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING_LITERAL  shift and go to state 33
    MINUS           shift and go to state 18
    LOGNOT          shift and go to state 14

    comment                        shift and go to state 4
    unary_token_before             shift and go to state 7
    constant                       shift and go to state 17
    unary_expression               shift and go to state 6
    compound                       shift and go to state 10
    function_call                  shift and go to state 11
    binop_expression               shift and go to state 12
    native_type                    shift and go to state 16
    array_reference                shift and go to state 22
    include                        shift and go to state 23
    type                           shift and go to state 24
    array_typeid                   shift and go to state 44
    for_loop                       shift and go to state 25
    assignment_expression          shift and go to state 26
    binop                          shift and go to state 28
    declaration                    shift and go to state 31
    typeid                         shift and go to state 34
    term                           shift and go to state 35
    assignment_expression_semi     shift and go to state 36
    function_declaration           shift and go to state 37
    expr                           shift and go to state 40
    identifier                     shift and go to state 47

state 2

    (10) top_level -> empty .

    COMMENT         reduce using rule 10 (top_level -> empty .)
    LBRACE          reduce using rule 10 (top_level -> empty .)
    FOR             reduce using rule 10 (top_level -> empty .)
    PPHASH          reduce using rule 10 (top_level -> empty .)
    LPAREN          reduce using rule 10 (top_level -> empty .)
    ID              reduce using rule 10 (top_level -> empty .)
    VOID            reduce using rule 10 (top_level -> empty .)
    SIZE_T          reduce using rule 10 (top_level -> empty .)
    UNKNOWN         reduce using rule 10 (top_level -> empty .)
    CHAR            reduce using rule 10 (top_level -> empty .)
    SHORT           reduce using rule 10 (top_level -> empty .)
    INT             reduce using rule 10 (top_level -> empty .)
    LONG            reduce using rule 10 (top_level -> empty .)
    FLOAT           reduce using rule 10 (top_level -> empty .)
    DOUBLE          reduce using rule 10 (top_level -> empty .)
    SIGNED          reduce using rule 10 (top_level -> empty .)
    UNSIGNED        reduce using rule 10 (top_level -> empty .)
    INT_CONST       reduce using rule 10 (top_level -> empty .)
    FLOAT_CONST     reduce using rule 10 (top_level -> empty .)
    STRING_LITERAL  reduce using rule 10 (top_level -> empty .)
    MINUS           reduce using rule 10 (top_level -> empty .)
    LOGNOT          reduce using rule 10 (top_level -> empty .)
    $end            reduce using rule 10 (top_level -> empty .)
    RBRACE          reduce using rule 10 (top_level -> empty .)


state 3

    (0) S' -> first .



state 4

    (2) top_level -> top_level comment .

    COMMENT         reduce using rule 2 (top_level -> top_level comment .)
    LBRACE          reduce using rule 2 (top_level -> top_level comment .)
    FOR             reduce using rule 2 (top_level -> top_level comment .)
    PPHASH          reduce using rule 2 (top_level -> top_level comment .)
    LPAREN          reduce using rule 2 (top_level -> top_level comment .)
    ID              reduce using rule 2 (top_level -> top_level comment .)
    VOID            reduce using rule 2 (top_level -> top_level comment .)
    SIZE_T          reduce using rule 2 (top_level -> top_level comment .)
    UNKNOWN         reduce using rule 2 (top_level -> top_level comment .)
    CHAR            reduce using rule 2 (top_level -> top_level comment .)
    SHORT           reduce using rule 2 (top_level -> top_level comment .)
    INT             reduce using rule 2 (top_level -> top_level comment .)
    LONG            reduce using rule 2 (top_level -> top_level comment .)
    FLOAT           reduce using rule 2 (top_level -> top_level comment .)
    DOUBLE          reduce using rule 2 (top_level -> top_level comment .)
    SIGNED          reduce using rule 2 (top_level -> top_level comment .)
    UNSIGNED        reduce using rule 2 (top_level -> top_level comment .)
    INT_CONST       reduce using rule 2 (top_level -> top_level comment .)
    FLOAT_CONST     reduce using rule 2 (top_level -> top_level comment .)
    STRING_LITERAL  reduce using rule 2 (top_level -> top_level comment .)
    MINUS           reduce using rule 2 (top_level -> top_level comment .)
    LOGNOT          reduce using rule 2 (top_level -> top_level comment .)
    $end            reduce using rule 2 (top_level -> top_level comment .)
    RBRACE          reduce using rule 2 (top_level -> top_level comment .)


state 5

    (78) native_type -> SHORT .

    TIMES           reduce using rule 78 (native_type -> SHORT .)
    ID              reduce using rule 78 (native_type -> SHORT .)


state 6

    (64) term -> unary_expression .

    DIVIDE          reduce using rule 64 (term -> unary_expression .)
    TIMES           reduce using rule 64 (term -> unary_expression .)
    PLUS            reduce using rule 64 (term -> unary_expression .)
    MINUS           reduce using rule 64 (term -> unary_expression .)
    MOD             reduce using rule 64 (term -> unary_expression .)
    OR              reduce using rule 64 (term -> unary_expression .)
    AND             reduce using rule 64 (term -> unary_expression .)
    LSHIFT          reduce using rule 64 (term -> unary_expression .)
    RSHIFT          reduce using rule 64 (term -> unary_expression .)
    LOGOR           reduce using rule 64 (term -> unary_expression .)
    LOGAND          reduce using rule 64 (term -> unary_expression .)
    LT              reduce using rule 64 (term -> unary_expression .)
    GT              reduce using rule 64 (term -> unary_expression .)
    LE              reduce using rule 64 (term -> unary_expression .)
    GE              reduce using rule 64 (term -> unary_expression .)
    EQ              reduce using rule 64 (term -> unary_expression .)
    NE              reduce using rule 64 (term -> unary_expression .)
    COMMENT         reduce using rule 64 (term -> unary_expression .)
    LBRACE          reduce using rule 64 (term -> unary_expression .)
    FOR             reduce using rule 64 (term -> unary_expression .)
    PPHASH          reduce using rule 64 (term -> unary_expression .)
    LPAREN          reduce using rule 64 (term -> unary_expression .)
    ID              reduce using rule 64 (term -> unary_expression .)
    VOID            reduce using rule 64 (term -> unary_expression .)
    SIZE_T          reduce using rule 64 (term -> unary_expression .)
    UNKNOWN         reduce using rule 64 (term -> unary_expression .)
    CHAR            reduce using rule 64 (term -> unary_expression .)
    SHORT           reduce using rule 64 (term -> unary_expression .)
    INT             reduce using rule 64 (term -> unary_expression .)
    LONG            reduce using rule 64 (term -> unary_expression .)
    FLOAT           reduce using rule 64 (term -> unary_expression .)
    DOUBLE          reduce using rule 64 (term -> unary_expression .)
    SIGNED          reduce using rule 64 (term -> unary_expression .)
    UNSIGNED        reduce using rule 64 (term -> unary_expression .)
    INT_CONST       reduce using rule 64 (term -> unary_expression .)
    FLOAT_CONST     reduce using rule 64 (term -> unary_expression .)
    STRING_LITERAL  reduce using rule 64 (term -> unary_expression .)
    LOGNOT          reduce using rule 64 (term -> unary_expression .)
    $end            reduce using rule 64 (term -> unary_expression .)
    RPAREN          reduce using rule 64 (term -> unary_expression .)
    SEMI            reduce using rule 64 (term -> unary_expression .)
    RBRACE          reduce using rule 64 (term -> unary_expression .)
    RBRACKET        reduce using rule 64 (term -> unary_expression .)
    PLUSPLUS        reduce using rule 64 (term -> unary_expression .)
    MINUSMINUS      reduce using rule 64 (term -> unary_expression .)
    COMMA           reduce using rule 64 (term -> unary_expression .)


state 7

    (59) unary_expression -> unary_token_before . term
    (60) term -> . identifier
    (61) term -> . constant
    (62) term -> . array_reference
    (63) term -> . function_call
    (64) term -> . unary_expression
    (88) identifier -> . ID
    (26) constant -> . INT_CONST
    (27) constant -> . FLOAT_CONST
    (28) constant -> . STRING_LITERAL
    (53) array_reference -> . identifier subscript_list
    (66) function_call -> . identifier arglist
    (59) unary_expression -> . unary_token_before term
    (55) unary_token_before -> . MINUS
    (56) unary_token_before -> . LOGNOT

    ID              shift and go to state 32
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING_LITERAL  shift and go to state 33
    MINUS           shift and go to state 18
    LOGNOT          shift and go to state 14

    unary_token_before             shift and go to state 7
    term                           shift and go to state 48
    constant                       shift and go to state 17
    unary_expression               shift and go to state 6
    function_call                  shift and go to state 49
    array_reference                shift and go to state 50
    identifier                     shift and go to state 51

state 8

    (76) native_type -> UNKNOWN .

    TIMES           reduce using rule 76 (native_type -> UNKNOWN .)
    ID              reduce using rule 76 (native_type -> UNKNOWN .)


state 9

    (74) native_type -> VOID .

    TIMES           reduce using rule 74 (native_type -> VOID .)
    ID              reduce using rule 74 (native_type -> VOID .)


state 10

    (5) top_level -> top_level compound .

    COMMENT         reduce using rule 5 (top_level -> top_level compound .)
    LBRACE          reduce using rule 5 (top_level -> top_level compound .)
    FOR             reduce using rule 5 (top_level -> top_level compound .)
    PPHASH          reduce using rule 5 (top_level -> top_level compound .)
    LPAREN          reduce using rule 5 (top_level -> top_level compound .)
    ID              reduce using rule 5 (top_level -> top_level compound .)
    VOID            reduce using rule 5 (top_level -> top_level compound .)
    SIZE_T          reduce using rule 5 (top_level -> top_level compound .)
    UNKNOWN         reduce using rule 5 (top_level -> top_level compound .)
    CHAR            reduce using rule 5 (top_level -> top_level compound .)
    SHORT           reduce using rule 5 (top_level -> top_level compound .)
    INT             reduce using rule 5 (top_level -> top_level compound .)
    LONG            reduce using rule 5 (top_level -> top_level compound .)
    FLOAT           reduce using rule 5 (top_level -> top_level compound .)
    DOUBLE          reduce using rule 5 (top_level -> top_level compound .)
    SIGNED          reduce using rule 5 (top_level -> top_level compound .)
    UNSIGNED        reduce using rule 5 (top_level -> top_level compound .)
    INT_CONST       reduce using rule 5 (top_level -> top_level compound .)
    FLOAT_CONST     reduce using rule 5 (top_level -> top_level compound .)
    STRING_LITERAL  reduce using rule 5 (top_level -> top_level compound .)
    MINUS           reduce using rule 5 (top_level -> top_level compound .)
    LOGNOT          reduce using rule 5 (top_level -> top_level compound .)
    $end            reduce using rule 5 (top_level -> top_level compound .)
    RBRACE          reduce using rule 5 (top_level -> top_level compound .)


state 11

    (69) function_declaration -> function_call . SEMI
    (63) term -> function_call .

    SEMI            shift and go to state 52
    DIVIDE          reduce using rule 63 (term -> function_call .)
    TIMES           reduce using rule 63 (term -> function_call .)
    PLUS            reduce using rule 63 (term -> function_call .)
    MINUS           reduce using rule 63 (term -> function_call .)
    MOD             reduce using rule 63 (term -> function_call .)
    OR              reduce using rule 63 (term -> function_call .)
    AND             reduce using rule 63 (term -> function_call .)
    LSHIFT          reduce using rule 63 (term -> function_call .)
    RSHIFT          reduce using rule 63 (term -> function_call .)
    LOGOR           reduce using rule 63 (term -> function_call .)
    LOGAND          reduce using rule 63 (term -> function_call .)
    LT              reduce using rule 63 (term -> function_call .)
    GT              reduce using rule 63 (term -> function_call .)
    LE              reduce using rule 63 (term -> function_call .)
    GE              reduce using rule 63 (term -> function_call .)
    EQ              reduce using rule 63 (term -> function_call .)
    NE              reduce using rule 63 (term -> function_call .)
    COMMENT         reduce using rule 63 (term -> function_call .)
    LBRACE          reduce using rule 63 (term -> function_call .)
    FOR             reduce using rule 63 (term -> function_call .)
    PPHASH          reduce using rule 63 (term -> function_call .)
    LPAREN          reduce using rule 63 (term -> function_call .)
    ID              reduce using rule 63 (term -> function_call .)
    VOID            reduce using rule 63 (term -> function_call .)
    SIZE_T          reduce using rule 63 (term -> function_call .)
    UNKNOWN         reduce using rule 63 (term -> function_call .)
    CHAR            reduce using rule 63 (term -> function_call .)
    SHORT           reduce using rule 63 (term -> function_call .)
    INT             reduce using rule 63 (term -> function_call .)
    LONG            reduce using rule 63 (term -> function_call .)
    FLOAT           reduce using rule 63 (term -> function_call .)
    DOUBLE          reduce using rule 63 (term -> function_call .)
    SIGNED          reduce using rule 63 (term -> function_call .)
    UNSIGNED        reduce using rule 63 (term -> function_call .)
    INT_CONST       reduce using rule 63 (term -> function_call .)
    FLOAT_CONST     reduce using rule 63 (term -> function_call .)
    STRING_LITERAL  reduce using rule 63 (term -> function_call .)
    LOGNOT          reduce using rule 63 (term -> function_call .)
    $end            reduce using rule 63 (term -> function_call .)
    RBRACE          reduce using rule 63 (term -> function_call .)


state 12

    (31) binop -> binop_expression .
